# ai_application

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  server.py  steps.md
api/: server.py
core/: langchain_interface.py  llmservice.py
proto/: langchain_service.proto  langchain_service_pb2.py  langchain_service_pb2_grpc.py  llm_service.proto  llm_service_pb2.py  llm_service_pb2_grpc.py
