[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "ai_application"
version = "0.1.0"
description = "An AI application using LangChain"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "grpcio==1.42.0",
    "grpcio-tools==1.42.0",
    "langchain==0.0.5"
]



